--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@felis392/iteration-js",
 	"description": "Utilities for JavaScript Iterable objects.",
-	"version": "0.0.1",
+	"version": "0.1.1",
 	"main": "index.js",
 	"author": "felis392",
 	"license": "MIT",
@@ -18,5 +18,8 @@
 	},
 	"scripts": {
 	 "test": "run-tiny-esm-test-runner ./test/test-*.js"
+	},
+	"exports": {
+		".": "./src/index.js"
 	}
 }
