--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "@felis392/iteration-js",
 	"description": "Utilities for JavaScript Iterable objects.",
 	"version": "0.1.1",
-	"main": "index.js",
+	"main": "./src/index.js",
+	"types": "./src/index.d.ts",
 	"author": "felis392",
 	"license": "MIT",
 	"type": "module",
@@ -18,8 +19,5 @@
 	},
 	"scripts": {
 	 "test": "run-tiny-esm-test-runner ./test/test-*.js"
-	},
-	"exports": {
-		".": "./src/index.js"
 	}
 }
