--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "@felis392/iteration-js",
 	"description": "Utilities for JavaScript Iterable objects.",
-	"version": "0.3.1",
-	"main": "./src/index.js",
-	"typings": "./src/index.d.ts",
+	"version": "0.4.0",
+	"main": "./index.js",
+	"typings": "./index.d.ts",
+	"types": "./index.d.ts",
 	"author": "felis392",
 	"license": "MIT",
 	"type": "module",
@@ -15,9 +16,13 @@
 		"type": "git"
 	},
 	"devDependencies": {
+		"@types/core-js": "^2.5.4",
 		"tiny-esm-test-runner": "^1.2.2"
 	},
 	"scripts": {
 		"test": "run-tiny-esm-test-runner ./test/test-*.js"
+	},
+	"dependencies": {
+		"typescript": "^4.0.2"
 	}
 }
