--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,10 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = crlf
 
+[*.{json,js,ts}]
+indent_style = space
+indent_size = 2
+
 [*.{md,markdown}]
 indent_style = space
 indent_size = 4
