i got it. (close #4)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "dropWhile.ts",
     "filter.ts",
     "findFirst.ts",
+    "flatMap.ts",
     "flatten.ts",
     "forEach.ts",
     "iterate.ts",
